Struktur drin mehr grundlagen

--- a/biblatex.cfg
+++ b/biblatex.cfg
@@ -57,7 +57,7 @@
 }
 
  % Neue Anordnung der Normen im Literaturverzeichnis
-\DeclareBibliographyDriver{misc}{%
+\DeclareBibliographyDriver{manual}{%
     \usebibmacro{begentry}%
     \printnames{author}%
     \setunit{\space}
@@ -76,6 +76,22 @@
     %\printtext{Abgerufen am }
     %\printurldate
     %\finentry
+    \newline
+}
+
+% Neue Anordnung der Misc.Quellen im Literaturverzeichnis
+\DeclareBibliographyDriver{misc}{%
+    \usebibmacro{begentry}%
+    \printnames{author}%
+    \setunit{\addcolon\space}
+    \printfield{title}%
+    \printtext{.}
+    %\linebreak
+    \printfield{url}%
+    \printtext{,}
+    %\linebreak
+    \printtext{Abruf am }
+    \printurldate
     \newline
 }
 
